# Exercise1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: common.h  encrypt-decrypt.h  files.h  md5-duplicate-detection.h
src/: encrypt-decrypt.cpp  files.cpp  md5-duplicate-detection.cpp
test-files/: A  E  file.txt  file_encrypted.txt
tests/: duplicate-detection.cpp  encrypt-decrypt.cpp  files.cpp
