cmake_minimum_required(VERSION 3.20)
project(ex1)

set(CMAKE_CXX_STANDARD 20)

include_directories(include)
include_directories(include/third-party)
file(GLOB SOURCES src/*.cpp)
file(GLOB THIRDPARTY src/third-party/*.cpp)
add_executable(ex1 main.cpp ${SOURCES} ${THIRDPARTY})
add_executable(test-duplicate-fn tests/duplicate-detection.cpp ${SOURCES} ${THIRDPARTY})
add_executable(test-encrypt-decrypt-fn tests/encrypt-decrypt.cpp ${SOURCES} ${THIRDPARTY})
add_executable(test-files-fn tests/files.cpp ${SOURCES} ${THIRDPARTY})
file(COPY test-files DESTINATION ${CMAKE_BINARY_DIR})

set(CMAKE_EXE_LINKER_FLAGS " -static")
target_link_libraries(ex1 -static-libgcc -static-libstdc++)
target_link_libraries(test-duplicate-fn -static-libgcc -static-libstdc++)
target_link_libraries(test-encrypt-decrypt-fn -static-libgcc -static-libstdc++)
target_link_libraries(test-files-fn -static-libgcc -static-libstdc++)
